# gblc

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: github-ci.yml
include/: gblc_queue.h  gblc_quicksort.h
src/: gblc_queue.c  gblc_quicksort.c
tests/: gblc_queue_test.c  gblc_quicksort_test.c
